import groovy.json.JsonSlurper

plugins {
    id 'net.minecraftforge.gradle' version '[6.0,6.2)'
    id 'org.spongepowered.mixin' version '0.7.+'
    id 'me.modmuss50.mod-publish-plugin' version '0.8.0'
}

version = mod_version
group = mod_group_id

base {
    archivesName = mod_id
}

java.toolchain.languageVersion = JavaLanguageVersion.of(17)

minecraft {
    mappings channel: mapping_channel, version: mapping_version
}

mixin {
    add sourceSets.main, "${mod_id}.refmap.json"
    config "${mod_id}.mixins.json"
}

repositories {
    maven { url "https://cursemaven.com" }
    maven { url "https://api.modrinth.com/maven" }
}

dependencies {
    minecraft "net.minecraftforge:forge:${minecraft_version}-${forge_version}"
    annotationProcessor 'org.spongepowered:mixin:0.8.5:processor'

    implementation fg.deobf("curse.maven:l2library-620203:5275597")
    implementation fg.deobf("curse.maven:l2hostility-909207:6497957")
    implementation fg.deobf("curse.maven:curios-309927:4834490")
    implementation fg.deobf(files("libs/l2tabs-0.3.3.jar"))
    compileOnly files("libs/kubejs-forge-2001.6.5-build.26.jar")
    compileOnly files("libs/[犀牛] rhino-forge-2001.2.3-build.10.jar")
    compileOnly files("libs/architectury-9.2.14-forge.jar")
    compileOnly files("libs/l2damagetracker-0.4.3.jar")
    compileOnly files("libs/Registrate-MC1.20-1.3.11.jar")
    compileOnly files("libs/l2complements-2.6.1.jar")

    testImplementation platform('org.junit:junit-bom:5.10.2')
    testImplementation 'org.junit.jupiter:junit-jupiter'
    testImplementation files("libs/kubejs-forge-2001.6.5-build.26.jar")
    testImplementation files("libs/[犀牛] rhino-forge-2001.2.3-build.10.jar")
    testImplementation files("libs/architectury-9.2.14-forge.jar")
}

tasks.named('processResources', ProcessResources).configure {
    var replaceProperties = [
            minecraft_version: minecraft_version, minecraft_version_range: minecraft_version_range,
            forge_version: forge_version, forge_version_range: forge_version_range,
            loader_version_range: loader_version_range,
            mod_id: mod_id, mod_name: mod_name, mod_license: mod_license, mod_version: mod_version,
            mod_authors: mod_authors, mod_description: mod_description,
    ]
    inputs.properties replaceProperties

    filesMatching(['META-INF/mods.toml', 'pack.mcmeta']) {
        expand replaceProperties + [project: project]
    }
}

jar {
    manifest {
        attributes([
            'Specification-Title'     : mod_id,
            'Implementation-Title'    : mod_name,
            'Implementation-Version'  : mod_version,
            'MixinConfigs'            : "${mod_id}.mixins.json"
        ])
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
    options.compilerArgs << '-Xlint:-deprecation' << '-Xlint:-removal'
}

tasks.named('test').configure {
    useJUnitPlatform()
}

tasks.register('validateProjectResources') {
    def resourceFiles = fileTree('src/main/resources') {
        include '**/*.json'
    }
    def mixinSources = fileTree('src/main/java/com/l2hostility_tweaks/mixin') {
        include '*.java'
    }
    inputs.files(resourceFiles, mixinSources)

    doLast {
        resourceFiles.files.sort().each { jsonFile ->
            try {
                new JsonSlurper().parse(jsonFile, 'UTF-8')
            } catch (Exception exception) {
                throw new GradleException("Invalid JSON: ${project.relativePath(jsonFile)}", exception)
            }
        }

        def config = new JsonSlurper().parse(
                file('src/main/resources/l2hostility_tweaks.mixins.json'), 'UTF-8')
        def registered = ['mixins', 'client', 'server']
                .collectMany { key -> (config[key] ?: []) as List }
                .collect { it as String }
                .toSet()
        def sources = mixinSources.files
                .collect { it.name.substring(0, it.name.length() - '.java'.length()) }
                .toSet()
        def missingSources = registered - sources
        def unregisteredSources = sources - registered

        if (!missingSources.isEmpty() || !unregisteredSources.isEmpty()) {
            throw new GradleException(
                    "Mixin registration mismatch. Missing sources: ${missingSources.sort()}; " +
                            "unregistered sources: ${unregisteredSources.sort()}")
        }

        def tooltipKeys = [
                'enchantment.l2hostility_tweaks.reprint_counter.desc',
                'enchantment.l2hostility_tweaks.reprint_counter.desc_any',
                'enchantment.l2hostility_tweaks.reprint_counter.desc_armor',
                'enchantment.l2hostility_tweaks.abyss_pocket.desc',
                'enchantment.l2hostility_tweaks.gluttony_pocket.desc',
                'enchantment.l2hostility_tweaks.split_suppressor.desc',
                'tooltip.l2hostility_tweaks.abrahadabra_minion',
                'tooltip.l2hostility_tweaks.glow_enabled',
                'tooltip.l2hostility_tweaks.glow_disabled',
                'tooltip.l2hostility_tweaks.essence_use',
                'trait.l2hostility_tweaks.dispell.immunity',
                'trait.l2hostility_tweaks.dementor.immunity'
        ]
        ['en_us', 'zh_cn'].each { locale ->
            def langFile = file("src/main/resources/assets/l2hostility_tweaks/lang/${locale}.json")
            def translations = new JsonSlurper().parse(langFile, 'UTF-8') as Map
            def missingKeys = tooltipKeys.findAll { !translations.containsKey(it) }
            if (!missingKeys.isEmpty()) {
                throw new GradleException("Missing ${locale} tooltip keys: ${missingKeys}")
            }
        }

        def dispellMixin = file('src/main/java/com/l2hostility_tweaks/mixin/DispellTraitMixin.java')
                .getText('UTF-8')
        if (!dispellMixin.contains('trait.l2hostility_tweaks.dispell.immunity')) {
            throw new GradleException(
                    'Dispell immunity tooltip must be owned by DispellTraitMixin.addDetail')
        }
    }
}

tasks.named('check').configure {
    dependsOn tasks.named('validateProjectResources')
}

publishMods {
    file = jar.archiveFile
    changelog = file("CHANGELOG.md").exists() ? file("CHANGELOG.md").text : "Initial release"
    type = BETA
    modLoaders.add("forge")

//	    curseforge {
//	        accessToken = providers.environmentVariable("CURSEFORGE_TOKEN")
//	        projectId = "000000"  // TODO: 替换为 CurseForge 项目 ID
//	        minecraftVersions.add("1.20.1")
//	        requires("l2hostility")
//	        requires("l2library")
//	        optional("curios")
//	    }
}
